--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</h1>
 			<p>Try out below...</p>
 			<button type="button" id="start">Pick a color</button>
-			<p>... or drag and drop <a id="bookmarklet" title="toto">CoPiBoo - Color picker</a> into your browser's bookmarks or favorites toolbar.</p>
+			<p>... or drag and drop <a id="bookmarklet">CoPiBoo - Color picker</a> into your browser's bookmarks or favorites toolbar.</p>
 			<p>Your browser has to support the <a href="https://developer.mozilla.org/en-US/docs/Web/API/EyeDropper_API">EyeDropper API</a>. Check the support on <a href="https://caniuse.com/mdn-api_eyedropper">Can I Use</a>.</p>
 			<p><a href="https://github.com/twogrey/CoPiBoo---Color-Picker-Bookmarklet">Source code</a> · Author : <a href="https://twitter.com/twogrey">@twogrey</a></p>
 		</main>
